<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_shopping_cart"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login_now"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_desc"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/username_hint"
                android:text="rocky4@gmail.com"
                android:background="@drawable/input_text_background"
                app:layout_constraintTop_toBottomOf="@id/tvLoginDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/dark_grey"
                android:text="a@A367496"
                android:inputType="textPassword"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/password_hint"
                android:background="@drawable/input_text_background"
                app:layout_constraintTop_toBottomOf="@id/edtUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/not_have_account"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:background="@drawable/button_background"
                app:layout_constraintTop_toBottomOf="@id/edtPassword"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:background="@drawable/button_register_background"
                app:layout_constraintTop_toBottomOf="@id/lnRegister"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>