<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingBottom="40dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_shopping_cart"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/register_now"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLoginDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_desc"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:hint="@string/email_hint"
                android:background="@drawable/input_text_background"
                app:layout_constraintTop_toBottomOf="@id/tvLoginDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@drawable/input_text_background"
                app:layout_constraintTop_toBottomOf="@id/edtEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"
                android:background="@drawable/input_text_background"
                app:layout_constraintTop_toBottomOf="@id/edtPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:background="@drawable/button_background"
                app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>