<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="#F8F3F3"
    tools:context=".feature.homepage.HomeFragment">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvProducts"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginBottom="20dp"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/lnTotal"
       tools:listitem="@layout/item_product"/>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rvCustomer"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/lnTotal"
       tools:listitem="@layout/item_product"/>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:id="@+id/lnEmptyCustomer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:gravity="center"
       android:orientation="vertical">
      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/img1"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:src="@drawable/img_shopping_cart"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/empty_customer"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:fontFamily="@font/roboto_bold"
          android:textSize="20sp"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:id="@+id/lnEmptyList"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@id/lnTotal"
       android:gravity="center"
       android:orientation="vertical">
      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/img"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:src="@drawable/img_shopping_cart"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/empty_product"
          android:textAlignment="center"
          android:textColor="@color/black"
          android:fontFamily="@font/roboto_bold"
          android:textSize="20sp"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:id="@+id/lnTotal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginBottom="20dp"
       android:padding="20dp"
       android:background="@drawable/item_product_background"
       app:layout_constraintBottom_toTopOf="@+id/lnGroupBtn">

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:fontFamily="@font/roboto_bold"
          android:text="Total: "
          android:textSize="20sp"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvTotal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:fontFamily="@font/roboto_bold"
          android:text="0"
          android:textSize="20sp"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:id="@+id/lnGroupBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       android:orientation="horizontal">
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnAddNewProduct"
          android:layout_width="0dp"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:layout_marginEnd="10dp"
          android:text="@string/scan"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:fontFamily="@font/roboto_bold"
          android:textSize="20sp"
          android:background="@drawable/button_background"/>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btnPayNow"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="60dp"
          android:text="@string/pay"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:fontFamily="@font/roboto_bold"
          android:textSize="20sp"
          android:background="@drawable/button_register_background"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>